Closed
Bug 558627
Opened 15 years ago
Closed 15 years ago
[D2D]Re-painting is not performed properly when page is scrolling
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: alice0775, Assigned: bas.schouten)
References
Details
Attachments
(2 files)
|
502.49 KB,
image/jpeg
|
Details | |
|
2.73 KB,
patch
|
robarnold
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a5pre) Gecko/20100410 Minefield/3.7a5pre ID:20100410035858
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a5pre) Gecko/20100410 Minefield/3.7a5pre ID:20100410035858
Enabled D2D/DW, when I scrolled the overlapped window , Re-painting is not performed properly.
C2Q@2.5Ghz, ATI Radeon HD4350, Windows7 home premium 64bit.
Reproducible: Always
Steps to Reproduce:
1. Start Minefield with D2D/DW enabled profile
2. Run Windows Task manager and makes it show up in front of other applications.
3. Let those windows overlap
4. scroll web page by mouse wheel and/or by using scroll bar.
Actual Results:
Re-painting is not performed properly
Expected Results:
Re-painting should be performed properly
| Assignee | ||
Comment 1•15 years ago
|
||
This appears to be with Aero disabled, is that correct?
| Reporter | ||
Comment 2•15 years ago
|
||
(In reply to comment #1)
> This appears to be with Aero disabled, is that correct?
Yes. Windows Classic Visul Style.
| Assignee | ||
Comment 3•15 years ago
|
||
(In reply to comment #2)
> (In reply to comment #1)
> > This appears to be with Aero disabled, is that correct?
>
> Yes. Windows Classic Visul Style.
Desktop composition is on though? (i.e. the DWM is running)
I cannot reproduce this.
| Reporter | ||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> (In reply to comment #2)
> Desktop composition is on though? (i.e. the DWM is running)
>
> I cannot reproduce this.
No, Desktop composition is unchecked(off) in the performance option dialog.
| Assignee | ||
Comment 5•15 years ago
|
||
Interesting, could you see if you can repro with it on?
| Reporter | ||
Comment 6•15 years ago
|
||
(In reply to comment #5)
> Interesting, could you see if you can repro with it on?
I can not turn on Desktop composition.
Because it is turned off automatically. I think that this behavior is windows default.
| Reporter | ||
Comment 7•15 years ago
|
||
>Because it is turned off automatically. I think that this behavior is windows default.
Because it is turned off automatically. I think that this behavior is windows default when I chose Windows Classic Theme.
| Assignee | ||
Comment 8•15 years ago
|
||
I can reproduce this with the classic theme. What I believe is happening is that we don't draw the part under the TaskManager when running the classic theme. When we proceed to scroll that part into view ScrollWindowEx would normally know this and invalidate it even though it scrolled into view.
The D2D scrolling code is not taking this into account. We need to modify the scroll functions to somehow realize that this part that is scrolled into view above the covering window still needs to be invalidated! (I can think of ways to do this, but they're not pretty, hopefully someone has a good idea!)
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → bas.schouten
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 9•15 years ago
|
||
This patch will ensure we invalidate any parts scrolled into view from the system clipping region (i.e. parts occluded by other windows when desktop composition is off). This -should- also take care of the odd row of pixels when using different DPIs, but since I can no longer reproduce that problem (our window layout changed), I can't be 100% sure. We need to keep an eye on it though if anybody sees that bug reappearing (bug 548935).
Attachment #451325 -
Flags: review?(jmathies)
| Assignee | ||
Updated•15 years ago
|
Attachment #451325 -
Flags: review?(jmathies) → review?(neil)
Comment 10•15 years ago
|
||
Comment on attachment 451325 [details] [diff] [review]
Properly update parts inside system clipping region
While the patch looks eminently reasonable, none of my build machines are currently configured to be able to build D2D...
Attachment #451325 -
Flags: review?(neil)
| Assignee | ||
Updated•15 years ago
|
Attachment #451325 -
Flags: review?(tellrob)
Comment 11•15 years ago
|
||
Comment on attachment 451325 [details] [diff] [review]
Properly update parts inside system clipping region
This appears to fix the scrolling issues.
Attachment #451325 -
Flags: review?(tellrob) → review+
| Assignee | ||
Comment 12•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•