Bug 558627: Make sure areas hidden by the system clipping region and scrolled into view get invalidated. r=robarnold